Save/Update files [ci skip]

--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -4,33 +4,33 @@
  two_sicilies_nation_title:0 "両シチリア国の統合"
  two_sicilies_nation_desc:0 "ナポリとシチリアは分裂し、長年にわたりヨーロッパ列強による争いの場となってきた。我々はシチリアを再統一し、自らの力で列強とならなければならない。"
  switzerland_nation_title:0 "スイス連邦の復活"
- switzerland_nation_desc:0 "我が国は、単独では脆弱である。小さな領域の連合の下でスイス国民を団結させ、各構成員の自由を守りながら、外国の侵略者に統一戦線を示すべきである。"
+ switzerland_nation_desc:0 "我が国は、単独では脆弱だ。侵略者たちに抵抗し皆の自由を守るには、諸領邦の統一戦線を結成し、スイス人民を統合せねばならない。"
  silesia_nation_title:0 "シレジア国家の形成"
- silesia_nation_desc:0 "シレジアは何世紀にもわたって公国に分割され、外国から支配され続けてきました。今こそシレジアは外国の支配と内部の分裂、その両方を捨てて、新しいシレジア国家を作る時です。"
+ silesia_nation_desc:0 "何世紀もの間、シレジアはいくつもの公国に分かれ、外国支配を受けてきました。今こそ外国支配や内部分裂を乗り越え、シレジアとして再統合する時です。"
  military_dictatorship_reform:1 "軍事独裁制"
  military_dictatorship_reform_desc:1 "軍事的な独裁者が権力を掌握し、独裁者として国家を支配している。新たな支配者は必ず将軍の中から選ばれる。"
  military_dictatorship:0 "軍事独裁制"
  military_dictatorship_desc:0 "軍事的な独裁者が権力を掌握し、独裁者として国家を支配している。新たな支配者は必ず将軍の中から選ばれる。"
  MILITARY_GOVERNMENT:0 "軍事共和制"
  ambrosian_republic.1.t:0 "ミラノの安定した政府"
- ambrosian_republic.1.d:0 "アンブロジアーナ黄金共和国の成立には困難が伴ったが、自由はついに勝利を収めた。封建主義の闇に陥ったわけでもなく、軍事的な専制政治に陥ったわけでもない。平和、正義、自由が[Root.GetName]国中に行き渡っている。"
- ambrosian_republic.1.d2:0 "アンブロジアーナ黄金共和国の成立には 困難があった。自暴自棄になって自由の理想を放棄した我々は将軍に絶対的な権力を与えたのだ、[Root.Monarch.GetName]が末永く平和を守りますように。"
- ambrosian_republic.1.d3:0 "アンブロジアーナ黄金共和国は失敗を運命づけられた実験だった。学者の創始者の高尚な理想は実行不可能であることが証明され、民衆は公爵の復帰を求めて叫んだ。[Root.Monarch.GetTitle] [Root.Monarch.GetName]は王位を掌握し、[Root.GetName]に自然の秩序を取り戻した。"
- ambrosian_republic.1.d4:0 "アンブロジアーナ黄金共和国は失敗を運命づけられた実験だった。公爵が不在の中、[Root.Overlord.GetName]の有力な領主たちは[Root.GetName]の空白の王座を自分のものだと主張する機会を掴んだ。[Root.Monarch.GetName] が知恵と忍耐をもって私たちを支配しますように。"
- ambrosian_republic.1.a:0 "聖アンブロジウスを讃えよ！"
+ ambrosian_republic.1.d:0 "我々は困難を乗り越え、アンブロジアーナ黄金共和国を成立させた。ついに自由が勝利を収めたのだ。暗黒の封建主義時代に戻ってはいないし、軍事独裁制に陥ってもいない。平和で、公正で、そして自由な社会が、[Root.GetName]に実現したのだ。"
+ ambrosian_republic.1.d2:0 "アンブロジアーナ黄金共和国を成立させるという困難の中で、我々は自由の理想を放棄し、軍人たちに絶対権を与えてしまった。[Root.Monarch.GetName]が末永く平和を守りますように…"
+ ambrosian_republic.1.d3:0 "アンブロジアーナ黄金共和国は失敗の運命にあった。民衆は、結局のところ、学者たちの高尚な理想は実現不可能だったと理解し、公爵の復位を求めた。そして、[Root.Monarch.GetTitle] [Root.Monarch.GetName]が公爵に復位し、[Root.GetName]に秩序を取り戻した。"
+ ambrosian_republic.1.d4:0 "アンブロジアーナ黄金共和国は失敗の運命にあった。そして、公爵が不在という好機に、[Root.Overlord.GetName]の有力領主たちは、空席となった[Root.GetName]の公爵位を奪取した。[Root.Monarch.GetName] の支配が、賢明で忍耐強いものとなりますように…"
+ ambrosian_republic.1.a:0 "聖アンブロージオ万歳！"
  ambrosian_republic.2.t:0 "ミラノの継承"
- ambrosian_republic.2.d:1 "[Root.GetName]の王位が空白であるため、フランスの[FRA.Monarch.GetTitle]と皇帝は公国に対する請求権について率直な議論を交わしている。フランスの要求は古いヴィスコンティ家との婚姻関係に基づいている。たとえその要求が強いものでなくとも、フランスは長期にわたってイタリアに対する構想を持っており、[FRA.Monarch.GetTitle]に対する抵抗力のある勢力はほとんど存在しない。一方で皇帝は明確な継承者が存在しないとき、帝国の法に基づいて公爵位は皇帝に与えられるべきだと主張している。"
- ambrosian_republic.2.a:0 "我々は自由を守るための準備をしなければならない。"
- ambrosian_republic.3.d:0 "ミラノは政治の混乱に陥った。王座は空席で成り上がりものの共和国は秩序を確立しようと無駄な努力をしている、今は断絶したヴィスコンティ家との結婚を理由としたミラノ公国に対する私たちの主張を強化する絶好の機会だ。"
- ambrosian_republic.3.a:0 "王座は我々のものだ！"
- ambrosian_republic.3.b:0 "我々はミラノに関心を持っていない。"
- ambrosian_republic.4.d:1 "ミラノは政治的混乱に陥った。王座は空席で成り上がり者の共和国は秩序を確立しようと無駄な努力をしている、帝国の法律では、公爵の称号は、公爵の系統が消滅したときに、皇帝[Emperor.Monarch.GetHerselfHimself]に渡されるべきである。この法律を根拠にミラノを自分たちのものとしたいのであれば、いわゆるアンブロジアーナ黄金共和国を退けるために迅速に行動しなければならない。"
- ambrosian_republic.5.t:0 "スフォルツァの提案"
- ambrosian_republic.5.d:1 "フランチェスコ・スフォルツァは我々の時代におけるもっとも偉大な将軍の一人であり、卓越したコンドッティエーリの指揮官である。我々がヴェネツィアに対する戦争で彼と対立していることは非常に不幸なことである。しかし、スフォルツァはミラノの人々の間で人気があり、その王位を請求している。\n\n分断された政府の一派はスフォルツァに対して寛大な提案を送った。もし彼が我々の敵を見捨て我々の主張に賛同するならば、ミラノは軍政擁護者としての地位と同様に、[sforza_promised_province.GetName]の州を提供するだろう。スフォルツァは共和国にとって大きな戦力になるだろうが、彼のミラノへの忠誠心が個人的な野心を上回るものであるかは多くの疑問が残る。"
- ambrosian_republic.5.d2:1 "フランチェスコ・スフォルツァは我々の時代におけるもっとも偉大な将軍の一人であり、卓越したコンドッティエーリの指揮官である。我々が[sforza_origin_country.GetName]に対する戦争で彼と対立していることは非常に不幸なことである。しかし、スフォルツァはミラノの人々の間で人気があり、その王位を請求している。\n\n分断された政府の一派はスフォルツァに対して寛大な提案を送った。もし彼が我々の敵を見捨て我々の主張に賛同するならば、ミラノは軍政擁護者としての地位と同様に、[sforza_promised_province.GetName]の州を提供するだろう。スフォルツァは共和国にとって大きな戦力になるだろうが、彼のミラノへの忠誠心が個人的な野心を上回るものであるかは多くの疑問が残る。"
- ambrosian_republic.5.d3:1 "フランチェスコ・スフォルツァは我々の時代におけるもっとも偉大な将軍の一人であり、卓越したコンドッティエーリの指揮官である。我々が反乱の鎮圧するための戦いで対立していることは非常に不幸なことである。しかし、スフォルツァはミラノの人々の間で人気があり、その王位を請求している。\n\n分断された政府の一派はスフォルツァに対して寛大な提案を送った。もし彼が我々の敵を見捨て我々の主張に賛同するならば、ミラノは軍政擁護者としての地位と同様に、[sforza_promised_province.GetName]の州を提供するだろう。スフォルツァは共和国にとって大きな戦力になるだろうが、彼のミラノへの忠誠心が個人的な野心を上回るものであるかは多くの疑問が残る。"
- ambrosian_republic.5.a:0 "我々は彼を陸軍の指揮官に任命するべきだ。"
- ambrosian_republic.5.b:0 "我々にスフォルツァは必要ない。"
+ ambrosian_republic.2.d:1 "空席となった[Root.GetName]の公爵位をめぐり、フランスの[FRA.Monarch.GetTitle]と皇帝は議論を交わしている。フランスは古いヴィスコンティ家との婚姻関係に基づき、公爵位を請求している。その請求権は決して強いものではないが、長くイタリアへの勢力拡大を目指してきた[FRA.Monarch.GetTitle]に対し、抵抗できる勢力はほとんど存在しない。一方、皇帝は明確な公爵位の請求権を持つ者が存在しない以上、帝国法に基づいて公爵位は皇帝に与えられるべきだと主張している。"
+ ambrosian_republic.2.a:0 "自由を守るため、戦いの準備をしなければ…"
+ ambrosian_republic.3.d:0 "ミラノは政治的混乱に陥った。公爵位は空席となっており、成り上がり者たちが築いた共和国は秩序を確立しようと無駄な努力を繰り返している。かつてヴィスコンティ家と婚姻した我々には、公爵位の請求権がある。今こそがミラノを奪取する絶好の機会だ。"
+ ambrosian_republic.3.a:0 "公爵位は我らのものだ！"
+ ambrosian_republic.3.b:0 "ミラノなどどうでもいい。"
+ ambrosian_republic.4.d:1 "ミラノは政治的混乱に陥った。公爵位は空席となっており、成り上がり者たちが築いた共和国は秩序を確立しようと無駄な努力を繰り返している。帝国法では、公爵家が断絶したならば、公爵位は皇帝[Emperor.Monarch.GetHerselfHimself]のものとなる、とされている。だがこの法に基づき公爵位を手に入れるには、まずは速やかにアンブロジアーナ黄金共和国を打倒しなくてはならない。"
+ ambrosian_republic.5.t:0 "スフォルツァへの提案"
+ ambrosian_republic.5.d:1 "コンドッティエーレであるフランチェスコ・スフォルツァは、我々の時代におけるもっとも偉大な将軍の一人だ。だが不幸なことに、現在我々はヴェネツィアとの戦争のため彼と対立している。しかし、スフォルツァはミラノの人々の間で人気があり、その公爵位の請求権も持っている\n\n分裂した政府のうち、一方はスフォルツァに対して寛大な提案を送った。もし彼が我々の敵を見捨て我々の味方に付くならば、彼に[sforza_promised_province.GetName]の州を与え、さらにその地の最高指導者に任命する、としている。スフォルツァは共和国にとって大きな戦力になるだろうが、彼のミラノへの忠誠心は、果たして個人的な野心を上回るほどのものなのだろうか？"
+ ambrosian_republic.5.d2:1 "コンドッティエーレであるフランチェスコ・スフォルツァは、我々の時代におけるもっとも偉大な将軍の一人だ。だが不幸なことに、現在我々は[sforza_origin_country.GetName]との戦争のため彼と対立している。しかし、スフォルツァはミラノの人々の間で人気があり、その公爵位の請求権も持っている\n\n分裂した政府のうち、一方はスフォルツァに対して寛大な提案を送った。もし彼が我々の敵を見捨て我々の味方に付くならば、彼に[sforza_promised_province.GetName]の州を与え、さらにその地の最高指導者に任命する、としている。スフォルツァは共和国にとって大きな戦力になるだろうが、彼のミラノへの忠誠心は、果たして個人的な野心を上回るほどのものなのだろうか？"
+ ambrosian_republic.5.d3:1 "コンドッティエーレであるフランチェスコ・スフォルツァは、我々の時代におけるもっとも偉大な将軍の一人だ。だが不幸なことに、現在我々は反乱の鎮圧のため、彼と対立している。しかし、スフォルツァはミラノの人々の間で人気があり、その公爵位の請求権も持っている。\n\n分裂した政府のうち、一方はスフォルツァに対して寛大な提案を送った。もし彼が我々の敵を見捨て我々の味方に付くならば、彼に[sforza_promised_province.GetName]の州を与え、さらにその地の最高指導者に任命する、としている。スフォルツァは共和国にとって大きな戦力になるだろうが、彼のミラノへの忠誠心は、果たして個人的な野心を上回るほどのものなのだろうか？"
+ ambrosian_republic.5.a:0 "彼を軍司令官に任命しよう。"
+ ambrosian_republic.5.b:0 "あんな男に用はない。"
  ambrosian_republic.6.t:0 "スフォルツァと共和国の衝突"
  ambrosian_republic.6.d:0 "スフォルツァはアンブロジアーナ黄金共和国内に多くの政敵がいる。共和国を設立したより多くの理想的で学者的な政治家は彼を王位を獲得しようと企んでいるものと疑いをかけ、一方でより多くの実践的な政治家は彼の人々の間での人気に腹を立てている。\n\nスフォルツァは自身から軍隊の指揮権を剥奪し、政府の地位から排除する陰謀を最近知った。彼は憤慨し、自身の完全な軍事支配を受け入れるか、もしくは再び戦場で対峙するかの最後通牒を国に対して発した。"
  ambrosian_republic.6.a:0 "スフォルツァによる軍事支配を強制する。"
@@ -1113,7 +1113,7 @@
  flavor_tus.EVTDESC21:0 "我々の権力が頂点に達している今、国家の性質に根本的な変化をもたらす好機である。我々は自身の王を宣言することも、共和制の理想への公約を再確認することもできる。我々が蓄えてきたあらゆる力で、我々は自身が望むあらゆる変化を押し進めることができる。"
  flavor_tus.EVTOPTA21:0 "政府は今のままで完璧だ！"
  flavor_tus.EVTOPTB21:0 "最高の栄光は王冠である！"
- flavor_tus.EVTOPTC21:0 "国民の声に耳を傾ける時だ！そして国民によって、貴族とは私たちを指しました。"
+ flavor_tus.EVTOPTC21:0 "国民の声に耳を傾ける時だ！そして国民によって、我々は統治者となるのだ。"
  flavour_swa.1.name:0 "カールスルーエの建設"
  flavour_swa.1.desc:0 "ドゥルラッハは豊かな都市へと成長した。しかし、近隣の主要都市と比較すると、見た目が悪く、全体的に素晴らしさに欠けるため、訪問者をしばしば白けさせてしまう。[Root.Monarch.GetTitle][Root.Monarch.GetName]もこの評価を共有している。最近、夢の中で、[Root.Monarch.GetSheHe]は、中心に壮大な宮殿がある、美しく整然とした[Root.Monarch.GetHerHis]の都市の未来像を見た。\n\nドゥルラッハの市当局は、市とその宮殿の大規模な再開発を許可することに消極的であるため、町から少し離れた別の場所が提案されている。計画の支持者が「カールスルーエ」と呼ぶ、提案された地点はかなり有望である。しかし、ドゥルラッハの住民たちは自分たちの町に取って代わられることに憤慨するかもしれない。 我々は新しい都市を建設するべきだろうか？"
  flavour_swa.1.A:0 "カールスルーエを建設しよう。"
