--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -3278,23 +3278,23 @@
  EVTDESC9076:0 "改革は終わっており、国家としての我々の時代はもはやこれまでだ。我々の州は皇帝の手に渡るが、我々はより大きなものの一部となることに慰めを見出す。"
  EVTOPTA9076:0 "アウェ・カエサル！（皇帝に敬礼！）"
  EVTNAME9450:0 "肉欲の罪"
- EVTDESC9450:0 "彼女の唇はどんなにか赤いことだろう？はっきりしない。うつろな、あなたの心の後ろで、司祭と説教者の注意を促す言葉がこだまする。これは何の説教だろうか？女性の体の悪魔と肉の誘惑？奇妙だ。悪魔が行くように、これはたくさんの天使のように見える。いずれにせよ、あなたは日曜日の告白にこれを持ち込まなければならないだろう。"
+ EVTDESC9450:0 "彼女の唇はなんと赤かっただろう？はっきりしない。あなたの頭の片隅で、司祭と説教者の注意を促す言葉が虚ろに響く。これは何の説教だろう？女性の体にひそむ悪魔と肉体の誘惑についてか？奇妙だ。悪魔が出て行くと、それはまるで天使のように見える。いずれにせよ、あなたは日曜日の告解でこれを話さなければならないだろう。"
  EVTOPTA9450:0 "後継者の必要性は、赦しの必要性に先立つものだ。"
  EVTOPTB9450:0 "お赦しください、主よ。私は罪を犯しました。"
  EVTNAME9451:0 "最愛の後継者の死"
- EVTDESC9451:0 "奇妙な熱病があなたの最愛の後継者である$HEIR$の人生を覆っている。宮廷の黒い上着を脱ぎ捨てると、やせ衰えた束の間のものが人生に与えた影響が心に浮かぶ。あなたの考えが永遠に向かおうとしたちょうどその時、若い女中の姿が目を引いた…"
- EVTOPTA9451:0 "主の腕の中に、私は慰めを見つける。"
- EVTOPTB9451:0 "女中の腕の中に、私は慰めを見つける。"
+ EVTDESC9451:0 "奇妙な熱病があなたの最愛の後継者である$HEIR$の命を奪った。廷臣たちは黒い衣服に着替えており、あなたはそれを見て、人生とはいかにはかなく移ろいやすいものであるかを強く感じている。あなたが永遠なるものに思いをめぐらそうとしたその時、若いメイドの姿があなたの目を引いた…"
+ EVTOPTA9451:0 "私は主の腕のなかに慰めを見い出す。"
+ EVTOPTB9451:0 "私はそのメイドの腕のなかに慰めを見い出す。"
  EVTNAME9452:0 "宮殿の政変"
- EVTDESC9452:0 "「$MONARCH$よ」、$HEIR_S_PRONOUN$は、$HEIR_ADJ$の剣であなたを指して言う。「あなたの支配は、この国を破壊の瀬戸際に導き、我々の一族の恥辱となった」$HEIR_CAP_S_PRONOUN$は$HEIR_ADJ$の共謀者たちに神経質に見える。他の世俗的な疲労感があなたの心を包む。我々の中に裏切り者がいたというのか？"
+ EVTDESC9452:0 "「$MONARCH$よ」、$HEIR_S_PRONOUN$は、$HEIR_ADJ$の剣であなたを指して言う。「あなたの支配は、この国を破壊の瀬戸際に導き、我々の一族の恥辱となった」$HEIR_CAP_S_PRONOUN$は$HEIR_ADJ$の共謀者たちを緊張した面持ちで眺めた。疲労感があなたの心の奥底まで押し寄せてくる。我々のなかに裏切り者がいたというのか？"
  EVTOPTA9452:0 "私も年老いたものだ…"
- EVTOPTB9452:0 "あなたはあのチビを甘やかしすぎた！"
+ EVTOPTB9452:0 "私があの小僧を甘やかしすぎたせいだ！"
  EVTNAME9453:0 "涕泣の曲"
- EVTDESC9453:0 "戦争はあなたの国の母と妻たちに大きな犠牲を背負わせ、座っているボロボロの年老いた未亡人のそばをあなたが通ると、彼女は顔を手で深く覆う、あなたの後継者は尋ねた。「ねえお父様、どうして女の人たちはみんな泣いているの？」"
- EVTOPTA9453:0 "あの人たちはみんな男の人のために泣いているんだよ…"
+ EVTDESC9453:0 "あなたの国の母親と妻たちは戦争で大きな犠牲を払った。あなたが、ぼろ服をまとい座り込む年老いた未亡人のそばを通ったとき、彼女は顔を手で深く覆っていた。あなたの後継者は尋ねた。「ねえお父様、どうしてあの女の人たちはみんな泣いているの？」"
+ EVTOPTA9453:0 "あの人たちはみんな身内の男の人を亡くして泣いているんだよ…"
  EVTOPTB9453:0 "あの人たちは単に泣いているだけだよ。"
  EVTNAME9454:0 "沈黙の春"
- EVTDESC9454:0 "彼女は笑い、「陛下…」と言う。彼女を見る。彼女の美しさはあなたの領土どころか、領土外ですら比類のないものである。場が静寂に包まれる。春の息吹に包まれる中で、彼女に寄りかかると、彼女の香水の魅惑的な香りが猛烈に漂い、ある思考が心を横切る…"
+ EVTDESC9454:0 "彼女は笑い、「陛下…」と言う。彼女を見ると、その美しさはあなたの領国のなかどころか、その外ですら比類のないものである。場が静寂に包まれる。春の息吹に包まれるなかで、彼女に寄りかかると、彼女の香水の魅惑的な香りが濃くたちこめ、ある考えが心を横切る…"
  EVTOPTA9454:0 "可愛いらしい娘だ…"
  EVTOPTB9454:0 "奥の手を…"
  EVTNAME9455:0 "夜会"
