--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -1535,7 +1535,7 @@
  SLANDERMERCHANTSTHEM_1:0 "商人を中傷"
  SLANDERMERCHANTSTHEM_2:0 "$MONARCHTITLE$、卑劣な詐欺師である"
  SLANDERMERCHANTSTHEM_3:0 "$WHO$"
- SLANDERMERCHANTSTHEM_4:0 "が我らが商人の名誉を傷つけました。"
+ SLANDERMERCHANTSTHEM_4:0 "が我が国の商人の名誉を傷つけました。"
  SLANDERMERCHANTSTHEM_5:0 "これにより今後数年間、交易力が大きく損なわれるでしょう。"
  SLANDERMERCHANTSTHEM_LOG:0 "$WHO$が我々の商人を中傷。"
  SLANDERMERCHANTSTHEM_BTN1:0 "OK"
