--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -81,7 +81,7 @@
  opinion_bav_gave_electorate:0 "選帝侯の地位を授けた"
  opinion_bav_refused_to_transfer_electorate:0 "選帝侯の任命を拒否"
  bav_bavarian_netherlands:0 "バイエルン領低地地方"
- desc_bav_bavarian_netherlands:0 "今では我々のものとなったオランダの港湾都市や貿易業者はその富を我々の財源に充てられるようになった。"
+ desc_bav_bavarian_netherlands:0 "今では我々のものとなった低地地方の港湾都市や貿易業者はその富を我々の財源に充てられるようになった。"
  emp_sax_conquer_brunswick_title:0 "西への拡張"
  emp_sax_conquer_brunswick_desc:0 "我らの隣人、ブラウンシュヴァイクのヴェルフ家、アンハルトのアスカーニエン家、マグデブルクの司教は、我々の弱みの兆候を僅かでも認めれば、喜んで飛びつくだろう。彼らを[Root.GovernmentName]に連れてくるべきだ。"
  emp_sax_reclaim_ancestral_lands_title:0 "先祖伝来の地の奪還"
