--- a/source/localisation/privateers_l_english.yml
+++ b/source/localisation/privateers_l_english.yml
@@ -50,7 +50,7 @@
  privateers.8.a:0 "我らには制限などない。彼らは我らの私掠船として含めてよい。"
  privateers.8.b:0 "[From.Monarch.GetTitle][From.Monarch.GetName]がこの誠実な交易商への災難を拒絶したのは正しかった。"
  privateers.9.t:0 "奴隷船の拿捕"
- privateers.9.d:0 "我らの私掠船の一つが船を捕らえたが、その船には所有者は積み荷だと考えたが我らは人と考えた物が詰まれていた。奴隷だ。[Root.GetName]は忌まわしき奴隷制を違法としているが、他の国には未だに理解されない。\n\n奴隷達は自由を与えられたが、彼らを運んでいた者への処置をどうするかについては議論がある。違う旗と法令の下だが、寛大さを見せ商人として扱うことは外交的選択肢だ。しかしながら、我らの法と倫理の感覚は奴隷商を常に海賊や人さらいとみなし、それに応じて扱うことを提案している。"
+ privateers.9.d:0 "我々の私掠船の一つが奴隷船を拿捕した。船長は奴隷を貨物だと考えていたようだが、我々は人間だと見なしている。[Root.GetName]は忌まわしき奴隷制を違法としているが、他国はそれほど啓蒙されていない。\n\nひとまず奴隷たちには自由を与えたが、輸送した者への処置という所論が残っている。国旗や法律は違えども、彼らを貿易業者として寛大に扱うのが外交的に正しい選択だろう。しかし、我々の法律や道徳的感覚に従えば、奴隷商を海賊や人さらいと見なし、それに応じた対処をするべきではないだろうか？"
  privateers.9.a:0 "人間を交易する輩は海賊以外の何物でも無い。"
  privateers.9.b:0 "今は彼らのするようにさせようか。"
  privateers.10.t:0 "反目する一族"
@@ -72,11 +72,11 @@
  privateers.13.b:0 "あの時はふさわしく思えた、しかし今となっては余りに危険すぎる…"
  privateers.13.c:0 "海賊行為は減少した。今更開戦する理由なぞない。"
  privateers.14.t:0 "破棄された約束への商人達の激怒"
- privateers.14.d:0 "5年前、我が国の交易路に災い成す私掠船を支援して私戦を既に行っている悪辣な国家に対する開戦の布告を約束した。しかしながら、戦争に向けた船舶建造の資源提供を受けたにもかかわらず、我が国の商人は余が協定の履行に失敗したとみなした。彼らは怒り狂い急激な政策の転換を訴え余の権威を傷つけた。"
+ privateers.14.d:0 "我々は5年前、我が国の交易路を荒らす私掠船を支援することで私戦を既に行っている、悪辣な国家に対する開戦の布告を約束した。しかしながら、我が国の商人は戦争に向けた船舶建造の資源提供を受けたにもかかわらず、我々が契約の履行を怠ったと見なした。彼らは怒り狂い抜本的な政策の転換を訴え我々の権威を傷つけた。"
  privateers.14.a:0 "強欲な戦争狂め…"
  privateers.15.t:0 "宣言されていなかった交易戦争が今宣言された"
- privateers.15.d:0 "我が国の商人に約束したように、我々は私的な摩擦を理由にして敵対行為を続けようとしていた国家と戦争となった。我の誠実さに満足して合意した通り、海軍の援助を続けるだろう。"
+ privateers.15.d:0 "我が国の商人に約束したように、我々は私闘を口実に敵対行為を続けていた国家と戦争となった。商人らは我々の誠実さに満足しており、海軍の援助を続けるだろう。"
  privateers.15.a:0 "開戦に際して敵がどれほど統制をとれるか見てみよう。"
  privateers.16.t:0 "海賊戦争"
- privateers.16.d:0 "私掠船と我々のライバルに対する境界線での海賊の相互の融資と我らに対し同じ戦術の使用は手に負えなくなった。我等は双方とも衝突を越えて開戦を宣言するのを拒否した一方、事実上の戦争は世界中の洋上ですでに両陣営が行っている。この激化はいまや私掠船を統制しているものに利益を与え、双方の交易にそして我々に痛みを与えている。"
+ privateers.16.d:0 "私掠船の相互融資、ライバルに対する国境線上での海賊行為、そして彼らが我々と同じ戦術を用いることで、状況は度し難いものとなっている。双方とも正式に開戦を宣言するのを拒否した一方、事実上の戦争は世界中の洋上ですでに両陣営が行っている。この激化はいまや私掠船として活動している者に利益を与え、双方の交易にそして我々に打撃を与えている。"
  privateers.16.a:0 "我らはただそれが奴らをより痛めることを確かめることしかできない。"
