Save/Update files [ci skip]

--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -30,7 +30,7 @@
  emp_bav_splendour_title:0 "豪奢"
  emp_bav_splendour_desc:0 "ヨーロッパの他の多くの統治者がしているように、我々もさらなる壮麗さと贅沢を取り入れよう。我々の統治者の偉大さと我が国の栄光にそれが加われば、誰も我々に打ち勝つことができなくなるのだ。"
  emp_bav_cultural_dominance_title:0 "バイエルンとしての主導文化"
- emp_bav_cultural_dominance_desc:0 "バイエルンの文化はドイツ領邦の民のなかでも最高のものでなければならず、我々の美しい方言は全ドイツの共通語とならねばならない。"
+ emp_bav_cultural_dominance_desc:0 "バイエルンの文化はドイツ人の領邦のなかでも最高のものでなければならず、我々の美しい方言は全ドイツの共通語とならねばならない。"
  emp_bav_cultural_dominance_trigger_tooltip:0 "北ドイツと南ドイツ地方の全ての州：\n      以下のうち一つを満たす必要があります：\n         §Y[Root.GetName]§!に領有されている。\n         §Y州§!の開発度が§Y[Root.Capital.GetName]§!より高くない。"
  emp_bav_standing_army_title:0 "常備軍の創設"
  emp_bav_standing_army_desc:0 "我々の領邦を防衛し強化するという、軍への要求が増大しているため、強力な常備軍の設立が求められている。そのバイエルン国軍は当てにならない傭兵の助けなしに独力で活動できるものでなければならない。"
@@ -39,7 +39,7 @@
  emp_bav_sway_cologne_effect_tooltip:0 "このミッションを達成すると§Yケルン§!に属国化を強要できます："
  emp_bav_sway_cologne_effect_tooltip2:0 "\n§Yケルン§!が属国にならない場合："
  emp_bav_tame_brandenburg_title:0 "ブランデンブルクの平定"
- emp_bav_tame_brandenburg_desc:0 "ブランデンブルクは、かつてヴィッテルスバッハ家のものであった領土を所有している。しかし、新参者のホーエンツォレルン家は北ドイツに独自の強大な国家を樹立する野望を持っている。我々はその野望が夢に過ぎないことを思い知らさなければならない。"
+ emp_bav_tame_brandenburg_desc:0 "ブランデンブルクは、かつてヴィッテルスバッハ家が領有していた地域の一つである。それなのに、新参者のホーエンツォレルン家は北ドイツに独自の強大な国家を樹立する野望を持っている。我々はその野望が夢に過ぎないことを思い知らさなければならない。"
  emp_bav_netherlands_title:0 "バイエルン領低地地方"
  emp_bav_netherlands_desc:1 "バイエルンは誰もが認めるように、低地地方の各地域にわずかな請求権を持っている。それはただの権利でしかないように見えるが、いまや我々はバイエルンの国力をほぼかつての栄光の時代のものにまで回復させ、その請求権を復活させてこの豊かな地方を再び支配下に置こうとしているのだ。"
  theocracy.1.desc.KOL_secondogeniture_of_BAV:0 "現在後継者が存在しないため、[probably_bavaria.GetUsableName]は[probably_bavaria.Monarch.Dynasty.GetName]家の貴公子を後継者の座に据えるために送ってきました。"
