--- a/source/localisation/nw_l_english.yml
+++ b/source/localisation/nw_l_english.yml
@@ -176,7 +176,7 @@
  NEWCOLONIALCOUNTRY_4:0 "$REGION$にある$COUNTRY$領土"
  NEWCOLONIALCOUNTRY_5:0 "新国家は母国から独立した領土ですが、遠い将来、管理に失敗した際には自由を奪われるかもしれません。"
  NEWCOLONIALCOUNTRY_6:0 ""
- NEWCOLONIALCOUNTRY_LOG:0 "$REGION$で$NAME$が形成された。"
+ NEWCOLONIALCOUNTRY_LOG:0 "$NAME$が$REGION$で形成された"
  NEWCOLONIALCOUNTRY_BTN1:0 "OK"
  NEWCOLONIALCOUNTRY_BTN2:0 "OK"
  NEWCOLONIALCOUNTRY_BTN3:0 "移動"
@@ -218,7 +218,7 @@
  RELEASEDCOLONY_4:0 "$REGION$にある$COUNTRY$"
  RELEASEDCOLONY_5:0 "この新国家は完全に独立状態にあります。"
  RELEASEDCOLONY_6:0 ""
- RELEASEDCOLONY_LOG:0 "$REGION$において$NAME$が解放されます。"
+ RELEASEDCOLONY_LOG:0 "$NAME$が$REGION$で解放された"
  RELEASEDCOLONY_BTN1:0 "OK"
  RELEASEDCOLONY_BTN2:0 "OK"
  RELEASEDCOLONY_BTN3:0 "移動"
