--- a/source/localisation/core_l_english.yml
+++ b/source/localisation/core_l_english.yml
@@ -225,10 +225,10 @@
  UNIT_VIEW_CHOOSE_LEADER_ENEMY:0 "ユニットが敵の領地にあるため、新しい指揮官を選ぶことはできません！"
  UNIT_VIEW_CHOOSE_LEADER_CONDOTTIERI:0 "このユニットが現在コンドッティエーリとして賃貸されているため、新しい指揮官を選ぶことはできません！"
  CANNOT_ASSIGN_MONARCH_CONDOTTIERI:0 "コンドッティエーリユニットの指揮官として君主または後継者を割り当てることはできません。"
- COMBATEND_UNIT_START:0 "$NUM|Y$で始まりました。"
- COMBATEND_UNIT_LOST:0 "$NUM|Y$を失った。"
- COMBATEND_UNIT_END:0 "$NUM|Y$は戦闘終了時、生き残っている。"
- COMBATEND_CAPTURED_SHIPS:0 "敗北側から$NUM|Y$隻の船を拿捕しました。"
+ COMBATEND_UNIT_START:0 "$NUM|Y$で開始。"
+ COMBATEND_UNIT_LOST:0 "$NUM|Y$を喪失。"
+ COMBATEND_UNIT_END:0 "$NUM|Y$が戦闘終了時に残存。"
+ COMBATEND_CAPTURED_SHIPS:0 "敗北側から艦船を$NUM|Y$隻拿捕。"
  NOCOLONISENONCITYADJACENT:0 "自分の州（植民地ではない）の一つに隣接している、または沿岸地域である州だけを植民州にすることができます。"
  ADMIRAL_NO_NAVAL_FORCE_LIMIT:0 "海軍の扶養限界は§Y0§!です。提督を雇用できるようにするためには扶養限界を増加させる必要があります。"
  LAG_BEHIND_HEADER:0 "$NAME$は遅れています！"
