Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -1657,7 +1657,7 @@
  COLONIZE_HORDE:0 "遊牧民の土地を植民地化"
  SELECT_THIS_UNIT:0 "このユニットを選択"
  HOLD_SHIFT_TO_DESELECT_UNIT:0 "§Yシフトキー§!でこのユニットを選択解除します。"
- OPINIONOF:0 "§Y$WHO_ADJ$の$NAME$に対する評価は次により補正されています：§!"
+ OPINIONOF:0 "§Y$WHO_ADJ$の$NAME$に対する評価補正：§!"
  OPINIONOF_IS:0 "$WHO_ADJ$の$NAME$に対する評価：$VAL|+$"
  desert_mountain:0 "砂漠山岳"
  grasslands:0 "草原"
@@ -2886,8 +2886,8 @@
  AI_DIPLOMAT:0 "外交家"
  AI_COLONIALIST:0 "植民主義者"
  AI_BALANCED:0 "バランス型"
- FORM_COALITION_AGAINST_EFFECT:0 "§Y$TARGET$§!に対する包囲網を§Y$WHO$§!と形成します。\n"
- ADD_TO_COALITION_EFFECT:0 "§Y$TARGET$§!に対する包囲網に§Y$WHO$§!を加入させます。\n"
+ FORM_COALITION_AGAINST_EFFECT:0 "対§Y$TARGET$§!包囲網を§Y$WHO$§!と形成します。\n"
+ ADD_TO_COALITION_EFFECT:0 "対§Y$TARGET$§!包囲網に§Y$WHO$§!を加えます。\n"
  MENU_BAR_QUIT:0 "ゲーム終了"
  QUIT_TITLE:0 "ゲーム終了"
  QUIT_DESC:0 "本当にゲームを終了してデスクトップに戻りますか？"
@@ -4440,7 +4440,7 @@
  NOT_ADD_RIVAL_AT_WAR:0 "§R－戦争中はライバルを追加することはできません§!"
  NOT_REMOVE_RIVAL_AT_WAR:0 "§R－戦争中はライバルを削除することはできません§!"
  NOT_REMOVE_RIVAL_UNTIL:0 "§R－最近§Y$NAME$§!をライバルとして追加したので、§Y$DATE$§!までは置き換えることはできません。§!"
- CANT_AFFORD_RIVAL_REMOVE:0 "§R- ライバルを削除するのに必要な§Y$COST$§!£dip£を持っていません。§!"
+ CANT_AFFORD_RIVAL_REMOVE:0 "§R- ライバル削除に必要な§Y$COST$§!£dip£を持っていない§!"
  NOT_ADD_RIVAL_UNTIL:0 "§R－最近§Y$NAME$§!をライバルから削除することを余儀なくされたため、§Y$DATE$§!までは再度追加することはできません。§!"
  LEDGER_PPROJ:0 "戦力投射"
  EXTRA_BONUS_GOOD_SMALL:0 "戦力投射を$MAX$以上持っている場合、以下を得ます：\n"
@@ -4868,7 +4868,7 @@
  COSSACKS_ABILITY_COSSACKS_MODIFIER:0 "これらの連隊に依存することによって安定度のコストが$MODIFIER$増加します"
  GOVERNMENT_RANK_BENEFITS_TITLE:0 "政府ランク$RANK|Y$から、以下のボーナスを得ています：\n"
  ABANDONSTATE_IS_CONVERTING_RELIGION:0 "$PROVINCENAME|Y$の人々を改宗しているので、ステートを放棄することはできません。\n"
- ABANDONSTATE_IS_CONVERTING_CULTURE:0 "$PROVINCENAME|Y$の人々を改宗しているので、ステートを放棄することはできません。\n"
+ ABANDONSTATE_IS_CONVERTING_CULTURE:0 "$PROVINCENAME|Y$の人々を転向させているので、ステートを放棄することはできません。\n"
  CONFIRMABANDONSTATETEXT:1 "$NAME$がステートとみなされなくなることで、毎月$COST|Y$¤の維持費を支払う必要がなくなりますが、州の自治率は遥かに高いレベルへと増加します。\n\n§R自治率の増加によるすべての補正が州から取り除かれます。§!"
  TAU_parliament_name:0 "ウトゥ"
  rotten_borough_reform:0 "腐敗選挙区改革"
@@ -4970,7 +4970,7 @@
  elections.800.c:0 "[lottery_candidate_c_@ROOT.GetName]が当選しました。"
  elections.800.da:0 "くじ引きに決定を委ねよう。"
  elections.800.e:1 "[Root.Monarch.GetName]の最愛の親族を選ぶ"
- STAPAT_DO_IT:2 "全ての州で完全に中核化され、正教が信仰されかつそれらの州の文化が受容されている開発度30以上の州に主教座を奉献できます。\n\n$NAME|Y$における主教座の奉献は$VAL$の総主教の権威及び、以下の永久的な効果をもたらします：\n$EFFECT$"
+ STAPAT_DO_IT:2 "全ての州が完全に中核化され、正教を信仰し、文化が受容されている開発度30以上のステートに主教座を奉献できます。\n\n$NAME|Y$における主教座の奉献は$VAL$の総主教の権威及び、以下の永久的な効果をもたらします：\n$EFFECT$"
  ab_siege_blockades:1 "浮き砲台"
  NOAB_YOU_ARE_DEFENDING:1 "あなた自身の要塞を砲撃することはできません。"
  NOAB_NOT_LEADING:2 "包囲中でないまたは宗主国として参加していない場合、砲撃命令は出せません。"
@@ -5009,7 +5009,7 @@
  AVAILABLE_BANNERS_LIMIT:0 "$MAX|Y$の八旗のうち$CURRENT|Y$をすでに徴集しているため、この数は$VAL|Y$に減少します。"
  BLOCK_END_GAME_TAGS:0 "国家形成の制限"
  FE_ENDGAME_TAGS_BLOCKE:1 "ゲームを通じ、グレートブリテンやオスマンのように、ゲームの終盤の国家を1つしか形成できないため、ゲームがやや難しくなります。"
- CONFIRMMAKESTATETEXT_OVER_CAP:0 "$NAME$をステートにすることで毎月の維持費は$COST|Y$¤になりますが、自治率が低いレベルに下がった場合には収入が約$INC|Y$¤増加します。また、その地域からの人的資源と水兵も増加します。\n\n$NAME$をステートにすると領土管理限界のうち$CAP|Y0$を使用し、合計$USED_CAP|Y0$になります。\n§Rこれは$MAX_CAP|Y0$の領土管理限界になってしまい、ペナルティを発生させてしまうでしょう！"
+ CONFIRMMAKESTATETEXT_OVER_CAP:0 "$NAME$をステートにすると、毎月の維持費は$COST|Y$¤になりますが、自治率が低いレベルに下がった場合には収入が約$INC|Y$¤増加します。また、地域からの人的資源と水兵も増加します。\n\n$NAME$をステートにすると領土管理限界のうち$CAP|Y0$を使用し、合計$USED_CAP|Y0$になります。\n§Rこれにより領土管理限界$MAX_CAP|Y0$を超えてしまい、ペナルティを発生させてしまうでしょう！"
  APH_NOT_CAPITAL:0 "自国の首都を帝国に追加することはできません、まず帝国に参加しましょう"
  APH_IS_PART_OF_TRADE_COMPANY:0 "$NAME$は交易会社内にあり、神聖ローマ帝国の一部となることはできません。"
  alert_max_monarch_power_reached_instant:0 "§Y君主力が上限に達した！§!"
