--- a/source/localisation/diplomacy_l_english.yml
+++ b/source/localisation/diplomacy_l_english.yml
@@ -81,11 +81,11 @@
  NO_ANNEX_PROGRESS_LIBERTY:0 "彼らの独立欲求が高すぎるため、併合が進みません。併合のためには独立欲求が§Y$LIMIT$§!未満である必要がありますが、現在の独立欲求の値は§R$AMOUNT$§!です。\n"
  ALL_CORES_AND_CLAIMS:0 "全ての中核州と請求権を持つ州"
  RIVAL_BENEFITS:1 "§Y$WHO$§!は我々のライバルであり、彼らに対し我が国は以下のボーナスを得る：\n"
- RIVAL_DIPLO_ALLY:0 "- 彼らの敵と同盟を結べる可能性が高い。\n"
+ RIVAL_DIPLO_ALLY:0 "- 彼らの敵と同盟を結べる可能性が高い\n"
  RIVAL_BENEFITS_NONE:1 "ライバルに対して、我が国は以下のボーナスを得る：\n"
- RIVAL_BENEFITS_TRADE:0 "- 禁輸中の交易効率ペナルティがない。\n"
+ RIVAL_BENEFITS_TRADE:0 "- 禁輸中の交易効率ペナルティがない\n"
  RIVAL_PRESTIGE:0 "戦闘に勝利した時の威信の上昇$VAL$。\n"
- RIVAL_DIP_POWER:0 "和平交渉で州を要求するための£dip£外交君主点が$VAL$になる。\n"
+ RIVAL_DIP_POWER:0 "和平交渉で州を要求する際の£dip£コストが$VAL$になる。\n"
  RIVAL_SPY:0 "諜報網の構築の速度が$VAL$増加する。\n"
  BENEFIT_FOR_EMPEROR:1 "皇帝が以下を得る：\n$MODIFIER$"
  BENEFIT_FOR_MEMBER:2 "加盟国が以下を得る：\n$MODIFIER$"
@@ -260,16 +260,16 @@
  HAVE_COALITION_WITH:0 "包囲網に参加しています"
  JOIN_COALITIONTITLE:0 "包囲網に参加"
  JOIN_COALITIONDESC:0 "彼らに対する包囲網に参加"
- JOIN_COALITIONDESC2:0 "$WITH$に対する包囲網に参加"
+ JOIN_COALITIONDESC2:0 "対$WITH$包囲網に参加"
  FORMCOALITIONTITLE:0 "包囲網を形成"
  FORMJOINCOALITIONTITLE:0 "包囲網を形成/参加"
  FORMCOALITIONDESC:0 "彼らに対する包囲網を形成"
- FORMCOALITIONDESC2:0 "$WITH$に対する包囲網を形成"
- FORM_COALITION_AGAINST:0 "§Y$WHO$§!に対する包囲網を形成してよろしいですか？もし包囲網のいずれかの参加国が§Y$WHO$§!と開戦した場合、\n全ての参加国が参戦するでしょう。"
- JOIN_COALITION_AGAINST:0 "§Y$WHO$§!に対する包囲網を参加してよろしいですか？もし包囲網のいずれかの参加国が§Y$WHO$§!と開戦した場合、\n全ての参加国が参戦するでしょう。"
- COALITION_WHY_ALREADY:0 "我々はすでに§Y$WHO$§!に対する包囲網に参加しています。"
- COALITION_WHY_NOT_LEADER:0 "我々は§Y$WHO$§!に対する包囲網の指導者ではありません 。§Y$LEADER$§!のみが新参者を招くことができます。"
- COALITION_WHY_EXISTS:0 "§Y$WHO$§!に対する包囲網がすでに存在します。 §Y$LEADER$§!のみが新参者を招くことができます。"
+ FORMCOALITIONDESC2:0 "対$WITH$包囲網を形成"
+ FORM_COALITION_AGAINST:0 "対§Y$WHO$§!包囲網を形成してよろしいですか？もし包囲網のいずれかの参加国が§Y$WHO$§!と開戦した場合、\n全ての参加国が参戦するでしょう。"
+ JOIN_COALITION_AGAINST:0 "対§Y$WHO$§!包囲網に参加してよろしいですか？もし包囲網のいずれかの参加国が§Y$WHO$§!と開戦した場合、\n全ての参加国が参戦するでしょう。"
+ COALITION_WHY_ALREADY:0 "我々はすでに対§Y$WHO$§!包囲網に参加しています。"
+ COALITION_WHY_NOT_LEADER:0 "我々は対§Y$WHO$§!包囲網の指導国ではありません 。§Y$LEADER$§!のみが新加盟国を招くことができます。"
+ COALITION_WHY_EXISTS:0 "対§Y$WHO$§!包囲網がすでに存在します。 §Y$LEADER$§!のみが新規加盟国を招くことができます。"
  FORMCOALITION_NORIVALS:0 "我々には、包囲網を始めるためのライバルがいません。"
  FORMCOALITION_INPROGRESS:0 "我々はすでに包囲網の中にいます！"
  FORMCOALITION_HASWAR:0 "我々は彼らと戦争中です"
@@ -286,11 +286,11 @@
  FABRICATECLAIMDESC_AT_WAR:0 "戦争中の他国に対して請求権の捏造を始めることはできません。"
  JUSTIFY_TRADE_CONFLICT_DESC_AT_WAR:0 "戦争中の国に対しては交易紛争の正当化を始めることはできません。"
  TRANSFER_TRADE_POWER_DESC_AT_WAR:0 "戦争中の国から交易力を求めることはできません。"
- FORMCOALITIONREQ:0 "$TARGET$に対する包囲網を形成しています。"
+ FORMCOALITIONREQ:0 "対$TARGET$包囲網を形成しています。"
  COALITIONTARGET:0 "$LIST$の包囲網の標的です。"
- COALITIONAGAINST:0 "$LIST$に対する包囲網"
+ COALITIONAGAINST:0 "対$LIST$包囲網に参加しています。"
  COALITIONWITH:0 "$LIST$との包囲網"
- COALITIONWITHAGAINST:0 "§Y$MEMBER$§! は§Y$TARGET$§!に対する包囲網の一員です。包囲網参加国の一国が§Y$TARGET$§!と戦争状態に入ったとき、すべての参加国は参戦を要請されます。"
+ COALITIONWITHAGAINST:0 "§Y$MEMBER$§!は対§Y$TARGET$§!包囲網の一員です。包囲網参加国が§Y$TARGET$§!と戦争状態に入ったとき、すべての参加国は参戦を要請されます。"
  ANNEX_IN_PROGRESS:0 "すでに外交併合が進行中です。"
  ANNEX_NOT_IN_PROGRESS:0 "彼らを併合中ではありません。"
  INTEGRATE_IN_PROGRESS:0 "すでに外交併合が進行中です。"
@@ -530,7 +530,7 @@
  break_alliance_war:0 "戦時中に同盟を破棄した"
  FABRICATECLAIMS_TARGET:0 "§Y$TARGET$§! に請求権を偽造しています。"
  CV_DIPLOMACY_NOTDISCOVEREDCOUNTRY:0 "§Y$COUNTRY$§!をまだ発見していません！"
- CV_DIPLOMACY_WARSCORE_TITLE:0 "§Y$WHO$§!に対し「§Y$WAR$§!」で$SIDE$です。"
+ CV_DIPLOMACY_WARSCORE_TITLE:0 "「§Y$WAR$§!」の$SIDE$として§Y$WHO$§!に対抗しています。"
  RM_ACTIVITY:0 "王室間の婚姻を締結"
  WAR_ACTIVITY:0 "宣戦布告"
  PEACE_ACTIVITY:0 "和平を提案"
