--- a/source/localisation/eldorado_l_english.yml
+++ b/source/localisation/eldorado_l_english.yml
@@ -279,13 +279,13 @@
  seven_cities_events.400.a:0 "エステバニコを雇おう。新たなコンキスタドールが必要だ。"
  seven_cities_events.400.b:0 "いや、もっと適任な人物を探そう。"
  seven_cities_events.401.t:0 "泥酔したウイスキー泥棒"
- seven_cities_events.401.d:0 "大声で淫乱な歌を歌い、ボトルからウィスキーをがぶ飲みする姿を発見された二人の男は明らかに犯罪を犯していた。義務を負っている間にウィスキーを盗み、それを飲んでしまうとは - 何とプロの精神に反していることか！彼らは軍法会議で裁かれ、鞭打ちを宣告され、その後解放された。"
+ seven_cities_events.401.d:0 "大声で淫乱な歌を歌い、ボトルからウィスキーをがぶ飲みする姿を発見された二人の男は明らかに犯罪を犯していた。義務を負っている間にウィスキーを盗み、それを飲んでしまうとは、何とプロの精神に反していることか！彼らは軍法会議で裁かれ、鞭打ちを宣告され、その後解放された。"
  seven_cities_events.401.a:0 "彼らは鞭打ちを受けるべきではなかった！"
  seven_cities_events.401.b:0 "それは彼らに教訓を教えてくれた！"
  seven_cities_events.401.c:0 "おそらくこれは彼らを彼らの目標から大きく遠ざけるものではないだろう…"
  seven_cities_events.402.t:0 "ペラルタ金鉱"
  seven_cities_events.402.d:0 "$PROVINCENAME$の血なまぐさい大虐殺は、原住民が日常的に黄金の探検家たちを攻撃したとき、ペラルタ族の生存者をほとんど残さなかった。生き残った人々は、我らがコンキスタドールと探検隊の兵士の助けを借りることを懇願し、彼らの一族が復讐を果たした場合、多くの黄金を支払うことを約束した。"
- seven_cities_events.402.a:0 "彼らが必要とするものは何でも - 我々が黄金を得られる限り！"
+ seven_cities_events.402.a:0 "彼らが必要とするものは何でも。我々が黄金を得られる限り！"
  seven_cities_events.402.b:0 "探検隊にはより多くの差し迫った問題がある。"
  seven_cities_events.403.t:0 "金とダイヤモンド"
  seven_cities_events.403.d:0 "ペラルタ族の生き残った者たちは、我々を大虐殺の場に導いた。死体はそのまま残っていて、荷馬車は破壊されていた…我々の探検隊は死体を埋葬するのを助け、いくつかの斥候が攻撃者の兆候を捜索した。いくつかの手がかりがペラルタの金鉱山へと導き、彼らが近づくにつれて攻撃者が鉱山に避難したことが明らかになった。ペラルタ族の一人は、それが彼らを攻撃したのと同じ集団であることを確認した。激しい戦闘の後、敵は鉱山の外の大地で死んでいた。ペラルタ族は彼らの約束を守り、我々に多くの黄金で報いた。"
