--- a/source/localisation/emperor_mercs_l_english.yml
+++ b/source/localisation/emperor_mercs_l_english.yml
@@ -6,7 +6,7 @@
  MERC_NOT_IN_RANGE_FOR_US_TO_HIRE_IN:0 "\n§Rここは傭兵を雇用できる範囲外です。§!"
  DISBAND_MERC_DRO:1 "傭兵団を解散させると、人的資源が回復する$DATE|Y$になるまで雇用することができません。"
  MACRO_HIRE_MERCENARY_COMPANY:0 "傭兵団"
- MACRO_HIRE_MERCENARY_COMPANY_INFO:0 "- 貴殿らフランス人は金のために戦うが、我らイギリス人は名誉のために戦うのだ。\n- ええ、人というのは己が最も欠いているもののため戦うものです。\n -- Robert Surcouf"
+ MACRO_HIRE_MERCENARY_COMPANY_INFO:0 "- 貴殿らフランス人は金のために戦うが、我らイギリス人は名誉のために戦うのだ。\n- ええ、人というのは己が最も欠いているもののため戦うものです。\n -- Robert Surcouf"
  MERCENARY_COMPANY_NOT_AVAILABLE_ANYMORE:0 "選択した傭兵団はもう利用できません。"
  MERCENARY_COMPANY_ALREADY_HIRED:0 "$COMPANY|Y$は既に雇用されています！"
  MERCENARY_COMPANY_NOT_AVAILABLE_UNTIL:1 "$COMPANY|Y$は今は人的資源の回復中であり、$DATE|Y$になるまで再び利用できません。"
@@ -39,7 +39,7 @@
  MERCENARY_COMPANY_AVAILABLE_4:0 "として知られる傭兵団が雇用可能です。"
  MERCENARY_COMPANY_AVAILABLE_5:0 "彼らは安い価格で長い間、喜んで我が国の為に戦うだろう。"
  MERCENARY_COMPANY_AVAILABLE_6:0 "$EXTRA$"
- MERCENARY_COMPANY_AVAILABLE_LOG:1 "$COMPANY$の傭兵団は雇用可能です。"
+ MERCENARY_COMPANY_AVAILABLE_LOG:1 "$COMPANY$の傭兵団、雇用可能に"
  MERCENARY_COMPANY_AVAILABLE_BTN1:0 "OK"
  MERCENARY_COMPANY_UNAVAILABLE_TITLE:0 "傭兵団は利用不可"
  MERCENARY_COMPANY_UNAVAILABLE_SETUP:0 "傭兵団が利用不可となったとき"
@@ -49,7 +49,7 @@
  MERCENARY_COMPANY_UNAVAILABLE_3:0 "$COMPANY|Y$"
  MERCENARY_COMPANY_UNAVAILABLE_4:0 "はもはや我々の傭兵として利用できません。"
  MERCENARY_COMPANY_UNAVAILABLE_5:0 "彼らを戦いや死に駆り立てたのが何であれ、彼らは生き残りました。"
- MERCENARY_COMPANY_UNAVAILABLE_LOG:1 "$COMPANY$の傭兵団はこれ以上雇用できません。"
+ MERCENARY_COMPANY_UNAVAILABLE_LOG:1 "$COMPANY$の傭兵団、もはや雇用できず"
  MERCENARY_COMPANY_UNAVAILABLE_BTN1:0 "OK"
  MERCENARY_COMPANY_DISBANDED_TITLE:0 "傭兵団の解散"
  MERCENARY_COMPANY_DISBANDED_SETUP:0 "傭兵団が解散させられたとき"
@@ -60,7 +60,7 @@
  MERCENARY_COMPANY_DISBANDED_4:0 "として知られる傭兵団は解散しました。"
  MERCENARY_COMPANY_DISBANDED_5:0 "維持費を払う必要が無くなり、傭兵団はゆっくりと人的資源を回復させるでしょう。"
  MERCENARY_COMPANY_DISBANDED_6:0 "我々は再び$AVAILABLE_DATE$を雇用できるだろう。"
- MERCENARY_COMPANY_DISBANDED_LOG:1 "$COMPANY$は解散されています。"
+ MERCENARY_COMPANY_DISBANDED_LOG:1 "$COMPANY$の傭兵団、解散"
  MERCENARY_COMPANY_DISBANDED_BTN1:0 "OK"
  MERCENARY_COMPANY_NEW_GENERAL_TITLE:0 "傭兵団に新しい将軍がいます"
  MERCENARY_COMPANY_NEW_GENERAL_SETUP:0 "未雇用の傭兵団が新しい将軍を抱えたとき"
@@ -70,7 +70,7 @@
  MERCENARY_COMPANY_NEW_GENERAL_3:0 "$COMPANY|Y$"
  MERCENARY_COMPANY_NEW_GENERAL_4:0 "として知られる傭兵団は、$LEADER$によって率いられるでしょう。"
  MERCENARY_COMPANY_NEW_GENERAL_5:0 "我々は彼らの活躍次第では雇用計画を見直す必要があるかもしれません。"
- MERCENARY_COMPANY_NEW_GENERAL_LOG:1 "$COMPANY$は新しい将軍がいる。"
+ MERCENARY_COMPANY_NEW_GENERAL_LOG:1 "$COMPANY$の傭兵団に新しい指揮官が"
  MERCENARY_COMPANY_NEW_GENERAL_BTN1:0 "OK"
  MERCENARY_COMPANY_NEW_GENERAL_HIRED_TITLE:0 "雇用中の傭兵団に新将軍が着任"
  MERCENARY_COMPANY_NEW_GENERAL_HIRED_SETUP:0 "雇用中の傭兵団が新しい将軍を抱えたとき"
@@ -81,7 +81,7 @@
  MERCENARY_COMPANY_NEW_GENERAL_HIRED_4:0 "として知られる傭兵団のリーダーは雇用している間に死亡しました。"
  MERCENARY_COMPANY_NEW_GENERAL_HIRED_5:0 "彼らは今$LEADER$によって率いられています。"
  MERCENARY_COMPANY_NEW_GENERAL_HIRED_6:0 "軍役の間に彼の有能さは証明されるだろう。"
- MERCENARY_COMPANY_NEW_GENERAL_HIRED_LOG:1 "我々が雇用している$COMPANY$には新しい将軍がいる。"
+ MERCENARY_COMPANY_NEW_GENERAL_HIRED_LOG:1 "我々が雇用している$COMPANY$の傭兵団に新しい将軍が"
  MERCENARY_COMPANY_NEW_GENERAL_HIRED_BTN1:0 "OK"
  HIRE_MERCENARY_COMPANY_INSTANT:0 "$COMPANY|Y$の傭兵団は雇用可能です。"
  ANY_EMPLOYED_MERCENARY_COMPANY_TRIGGER:0 "雇用されている傭兵団"
