--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -24,7 +24,7 @@
  emp_bav_oktoberfest_mission_title:0 "オクトーバーフェストの開始"
  emp_bav_oktoberfest_mission_desc:0 "国家の栄光や統治者たちの偉大さや民衆のすばらしさや馬の速さやビールの味を称賛する祝祭を毎年行なうなら、我々の威信と名声は間違いなく誰にも劣らぬものとなるだろう。"
  emp_bav_illuminati_mission_title:0 "イルミナティとの取引"
- emp_bav_illuminati_mission_desc:0 "我らが栄光ある[Root.GovernmentName]は「啓蒙主義者」を自称する秘密結社の台頭に直面している。彼らの目的のいくつかには価値を認められるが、その他のものは潜在的に危険なものであり、革命的思想に依拠している。我々はこの問題に対して毅然とした態度を取るべきだ。計画の採用か、組織の追放か。"
+ emp_bav_illuminati_mission_desc:0 "我らが栄光ある[Root.GovernmentName]は「啓蒙主義者」を自称する秘密結社の台頭に直面している。彼らの目的のいくつかには価値を認められるが、その他のものは潜在的に危険なものであり、革命思想に依拠している。我々はこの問題に対して毅然とした態度を取るべきだ。計画の採用か、組織の追放か。"
  emp_bav_cultural_center_title:0 "[Root.Capital.GetCapitalName]の開発"
  emp_bav_cultural_center_desc:0 "ヨーロッパの偉大な宮廷の我々の仲間たちは、我々が彼らと同等の輝きを持つ首都を手にするまで、我々を真剣に受け入れることは決してないであろう。"
  emp_bav_splendour_title:0 "豪奢"
@@ -2394,18 +2394,18 @@
  DID_NOT_WIN_WAR_AGAINST:0 "$TAG|Y$に対する戦争に勝利しなかった"
  WON_WAR_AGAINST_IN_YEARS:0 "過去$IN_YEARS|Y$年間に$TAG|Y$に対する戦争に勝利した"
  WON_WAR_AGAINST:0 "$TAG|Y$に対する戦争に勝利した"
- GOLDEN_BULL_INSTANT:0 "$NAME|Y$\n$EFFECT$\n§Y教皇資金§!から$COST|Y$¤を投資して、この金印勅書を選択します。"
+ GOLDEN_BULL_INSTANT:0 "$NAME|Y$\n$EFFECT$\n§Y教皇資金§!から$COST|Y$¤を投資して、この教皇勅書を選択します。"
  PAPACY_GOLDEN_BULLS:0 "教皇勅書"
- GOLDEN_BULL_PICKED_TITLE:0 "選択された金印勅書"
- GOLDEN_BULL_PICKED_SETUP:0 "教皇の支配者が金印勅書を選択したとき"
+ GOLDEN_BULL_PICKED_TITLE:0 "選択された教皇勅書"
+ GOLDEN_BULL_PICKED_SETUP:0 "教皇の支配者が教皇勅書を選択したとき"
  GOLDEN_BULL_PICKED_HEADER:0 "$MESSENGER$"
- GOLDEN_BULL_PICKED_1:0 "教皇の支配者が金印勅書を選択しました！"
+ GOLDEN_BULL_PICKED_1:0 "教皇の支配者が教皇勅書を選択しました！"
  GOLDEN_BULL_PICKED_2:0 "$MONARCHTITLE$、神が彼に与えたもうた力により、"
- GOLDEN_BULL_PICKED_3:0 "教皇は、以下の金印勅書の制定で、我らを祝福することを決断しました："
+ GOLDEN_BULL_PICKED_3:0 "教皇は、以下の教皇勅書の制定で、我らを祝福することを決断しました："
  GOLDEN_BULL_PICKED_4:0 "$BULL$"
- GOLDEN_BULL_PICKED_5:0 "この金印勅書は以下の効果があります："
+ GOLDEN_BULL_PICKED_5:0 "この教皇勅書は以下の効果があります："
  GOLDEN_BULL_PICKED_6:0 "$EFFECT$"
- GOLDEN_BULL_PICKED_LOG:0 "教皇の支配者が$BULL$を選択しました。"
+ GOLDEN_BULL_PICKED_LOG:0 "教皇の支配者、$BULL$を選択"
  GOLDEN_BULL_PICKED_BTN1:0 "OK"
  GOLDEN_BULL_PICKED_BTN2:0 "OK"
  GOLDEN_BULL_PICKED_BTN3:0 "移動"
