--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -645,7 +645,7 @@
  HAB_ideas_start:0 "オーストリアの伝統"
  HAB_ideas_bonus:0 "オーストリアの宿願"
  imperial_ambitions:0 "帝国の野望"
- imperial_ambitions_desc:0 "1250年のホーエンシュタウフェン家の落日に伴い、帝国は混沌へと陥り、1356年の金印勅書は国体制定の呼び掛けによって、無政府状態を法律化した。しかしながら、1438年に帝国の称号はオーストリアをその力の根源とする最も貴きハプスブルク家によってまた獲得された。オーストリアはこの称号を保持し続け、この帝国を改革し、神聖にして、ローマ的な帝国へと今再び戻さなくてはならない。"
+ imperial_ambitions_desc:0 "1250年のホーエンシュタウフェン家の落日に伴い、帝国は混沌へと陥り、1356年の教皇勅書は国体制定の呼び掛けによって、無政府状態を法律化した。しかしながら、1438年に帝国の称号はオーストリアをその力の根源とする最も貴きハプスブルク家によってまた獲得された。オーストリアはこの称号を保持し続け、この帝国を改革し、神聖にして、ローマ的な帝国へと今再び戻さなくてはならない。"
  military_border:0 "軍政国境地帯"
  military_border_desc:0 "我が国の国境防衛には、それを実行する方法にではなく、その費用を捻出する方法に深刻な問題がある。我々が打ち出した解決策は、専門的な軍事階級を築くために、国境地域で気前よく土地を付与するというものである。これにより我が国の国境が適切な費用で適切に保護できるようになるだけでなく、これらの兵士たちを他の業務にも利用できるようになる。"
  fugger_banks:0 "フッガー銀行"
