--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -4924,7 +4924,7 @@
  construct_shipyard_header:0 "海軍は我々を必要としている"
  construct_shipyard_title:0 "造船所を建設"
  construct_shipyard_desc:0 "我が国には適切な造船所がないので、必要な艦隊を必要なだけ建設することができない。我々は今、これらのうちの一つを建設する技術を有しており、その知識を実際に実行すべきである。"
- RIVALSWITH:0 "$LIST$を自然なライバルとみなしています。"
+ RIVALSWITH:0 "$LIST$を宿敵とみなしています。"
  IS_ISLAND:0 "は島である。"
  IS_NOT_ISLAND:0 "は島ではない。"
  IS_NOT_EMPTY:0 "は国家が所有している。"
@@ -7219,7 +7219,7 @@
  desc_expanded_bureaucracy:0 "彼らは、法がより多くの法を制定していると言い、そして、これは、行政の神聖な殿堂以上に真実である。我々の行政長官は首都の官僚主義を拡大しており、我々は今やより多くのものを得ている。これは統治の拡大に役立つが、欠点がないわけではない。いったん確立されると、統治階級は決してそれ自身を廃止するようには動かないだろう。"
  expand_bureaucracy_title:0 "官僚機構の拡大"
  expand_bureaucracy_desc:0 "彼らは、法がより多くの法を制定していると言い、そして、これは、行政の神聖な殿堂以上に真実である。我々の首都へのナショナルフォーカスにより、我々は役人に、国家の官僚制を拡大するよう求めることができる。"
- CURRENT_EMPEROR:0 "§Y$RULERNAME$§Wが皇帝である"
+ CURRENT_EMPEROR:0 "§Y$RULERNAME$§Wが皇帝です"
  formalize_measures_title:0 "度量衡の統一"
  formalize_measures_desc:0 "止まり木をパイクに変換しようとして、あなたは途中で計算できなくなる方法で実現できたことがあっただろうか？頭痛？眠れない夜？もう違う！我々の官僚は、度量衡の制度に一定の形を与えることを提案している。より効率的な取引によって収入を増やすことに加え、この改革は、人々が不正な尺度で税を払っていないことを理解するにつれ、人々は我々の支配により満足するだろう。"
  DOMESTIC_MODIFIERS:0 "補正"
