Save/Update files [ci skip]

--- a/source/localisation/nw2_l_english.yml
+++ b/source/localisation/nw2_l_english.yml
@@ -275,8 +275,8 @@
  canal_events.EVTOPTA8:0 "食糧をもう一度減らす"
  canal_events.EVTOPTB8:0 "覆水盆に返らず"
  canal_events.EVTNAME9:0 "アルコールの配給"
- canal_events.EVTDESC9:0 "[Root.GetName]の私たちの運河プロジェクトを取り巻く悲惨な状況のため、労働力は落ち込み、現場の士気も低下しています。 何か手を打たないと、事業全体が停止してしまう危険があります。打開策の一つとして、アルコールの摂取量を増やすことが挙げられました。"
- canal_events.EVTOPTA9:0 "いい考えだ"
+ canal_events.EVTDESC9:0 "[Root.GetName]の運河プロジェクトを取り巻く悲惨な状況は、労働者を落ち込ませ、やる気をなくさせています。 何か手を打たなければ、事業全体が停止してしまうかもしれません。打開策の一つとして、アルコールの摂取量を増やすことが挙げられました。"
+ canal_events.EVTOPTA9:0 "良い考えに思えるな"
  canal_events.EVTOPTB9:0 "それは間違ったやり方だ"
  canal_events.EVTNAME10:0 "運河会社を設立"
  canal_events.EVTDESC10:0 "[Root.GetName]を介して、運河の経済的見通しに関心のある裕福な投資家や商人は、建設を支援するために商業会社を設立しました。"
@@ -289,8 +289,8 @@
  canal_events.EVTDESC12:0 "驚いたことに、[Root.GetName]の私たちの運河プロジェクトが予定よりも速く進んでいるようです。"
  canal_events.EVTOPTA12:0 "これは本当か？"
  canal_events.EVTNAME13:0 "いい天気"
- canal_events.EVTDESC13:0 "最近では、[Root.GetName]の私たちの運河プロジェクトは、良い気象条件によって祝福されており、作業は予定より早く進んでいます！"
- canal_events.EVTOPTA13:0 "最後にいくつかの良いニュース"
+ canal_events.EVTDESC13:0 "[Root.GetName]の運河工事は、最近は天候にも恵まれ、予定よりも早く工事が進んでいます！"
+ canal_events.EVTOPTA13:0 "ようやくの朗報だ"
  canal_events.EVTNAME20:0 "疫病の発生"
  canal_events.EVTDESC20:0 "[Root.GetName]における疫病の発生が当社の運河プロジェクトに打撃を与えました！ 多くの労働者は、発熱、吐き気、および場合によっては口と眼からの出血の後に死亡した。 いくつかの犠牲者の皮膚が黄色に変わっているとの報告があります…"
  canal_events.EVTOPTA20:0 "代わりの兵士を送る"
