--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -866,7 +866,7 @@
  timurid_architecture:0 "ティムール式建築"
  timurid_architecture_desc:0 "我々の祖先の偉大な記念碑は、我々の偉大さを証明している。我々は、人々が真の主君が誰であるかを覚えておくよう、隣国の間でこのような建築様式を奨励するべきだ。"
  the_mantle_of_the_great_khan:0 "偉大なるハンの外套"
- the_mantle_of_the_great_khan_desc:0 "我々の名祖となった王朝の創始者の死は、より良い権力を目指すべきであると知っていたはずの人々への権力の空白を作り出した。しかし、婚姻を通じて、我々は偉大なカーン自身の家系であると主張しており、ステップの戦士は誰に従うべきかを知っている。"
+ the_mantle_of_the_great_khan_desc:0 "我々の王朝の始祖の死は、権力を志向する者どもを呼び寄せる空白地帯を生み出した。しかし、婚姻を通じて我々は偉大なハンから連なる血統の正当性を強化しており、ステップの戦士は誰に従うべきかを知っている。"
  unleash_the_tiger:0 "解き放たれた虎"
  unleash_the_tiger_desc:0 "ティムールは世界を彼の征服で震え上がらせ、我々は同じことをするつもりだ。我々の敵は、彼ら自身の大きな災害の著者となるだろう！"
  chagatai_literature:0 "チャガタイ文学"
@@ -957,9 +957,9 @@
  vij_tolerance:0 "寛容"
  vij_tolerance_desc:0 "人が自分の信条に従って出入りし、生きられるような自由を享受できる王国にすべきだ。"
  carnatic_music:0 "カルナティック音楽"
- carnatic_music_desc:0 "我々は全ての面においてイスラム教徒の侵略に抵抗せねばならない。北部諸国の音楽的伝統は既に外国の影響の兆しが見られる。これは音楽がデーヴァとデーヴィー自身より生まれた神の芸術形式であることを皆が知っているので、冒涜である。それらを守るヒンドゥー教徒を見るであろう。"
+ carnatic_music_desc:0 "我々は全ての面においてイスラム教徒の侵略に抵抗せねばならない。北部諸国の音楽的伝統は既に外国の影響の兆しが見られる。音楽がデーヴァとデーヴィー自身より生まれた神の芸術形式であるのは自明であり、これは冒涜である。伝統を擁護するヒンドゥー教徒を見せてやろう。"
  adroit_diplomacy:0 "巧みな外交"
- adroit_diplomacy_desc:0 "我らヒンドゥー教徒の数々の侵略者達は、再三再四同じ弱点、ヒンドゥー教徒間で争う傾向を見せてきた。我々はこれを自身の目的に利用するため常に準備せねばならない。"
+ adroit_diplomacy_desc:0 "我らヒンドゥー教徒の侵略者達は、再三再四侵略者同士で争う傾向を見せてきた。我々はこれを自身の目的に利用するため常に準備せねばならない。"
  army_for_city_of_victory:0 "勝利の都の軍隊"
  army_for_city_of_victory_desc:0 "勝利の都がその名にふさわしくなるためには勝利をもたらす軍隊を確保せねばならない。我が軍隊が訓練され、彼らの役割に誇りが持てるようにしよう。"
  AYU_ideas:0 "アユタヤのアイデア"
@@ -3626,7 +3626,7 @@
  cha_resisting_foreign_rule:0 "他国支配への抵抗"
  cha_resisting_foreign_rule_desc:0 "我が国民は至る所で別の宗教、文化、社会に囲まれている。過去にこのような状況下で繁栄してきたが、今や多くが我々の終焉を望んでいると言われている。敵が我々にとって何であっても、都市を要塞化し、準備せねばならない。"
  cha_cham_migrations:0 "チャム族の移住"
- cha_cham_migrations_desc:0 "かつてチャンパの支配下であった地域の多くで、我が国民はますます隅に追いやられてきた。結果、我々は現在、新天地に移住している。チャム族のディアスポラは一部はクメール領土に移住し、そのほかは、島に移住することを意味する。これは、組織化された民族の移動とは程遠いとはいえ、もし我々が移住の土地を提供すれば、彼らは我らの近隣の土地への移動に対する我々の保護の下で、確実にそうすることを好むであろう。"
+ cha_cham_migrations_desc:0 "かつてチャンパの支配下であった地域の多くで、我が民族はますます隅に追いやられてきた。結果、我々の一部は現在、新しい土地に移住している。チャム族のある者はクメール領土に移住し、ある者は新天地へと移住している。民族離散とでも呼ぶべき現状ではあるが、もし我々が安住の地を提供するならば、隣国の土地へ移住するよりも我々の保護下であることを望むだろう。"
  BAD_ideas:0 "バーデンのアイデア"
  BAD_ideas_start:0 "バーデンの伝統"
  BAD_ideas_bonus:0 "バーデンの宿願"
@@ -5907,9 +5907,9 @@
  hsc_highland_charge:0 "ハイランド兵の突撃"
  hsc_highland_charge_desc:0 "火器類が戦場に革命をもたらしており、スコットランド高地地方の戦士はそれに適応せねばならない。攻撃的な新しい急襲戦術が我が軍の将軍によって編み出された。我々の兵士は、できれば下り坂で、最初の敵の一斉射撃のなか正面から突撃し、進むにつれて我が軍も発砲する。発砲後、より伝統的な武器を取り出して乱戦に入る。しかしながら、この戦術に要求される速度のせいで、我々の戦士は衣類をほとんど着用しないことを余儀なくされる。"
  hsc_arming_act:0 "武装条例"
- hsc_arming_act_desc:0 "圧政者は、我々が抵抗する能力を奪うため、武器を没収する。武装条例は、全ハイランダーの者へ銃器を所有し、訓練する事を義務づける。"
+ hsc_arming_act_desc:0 "我が国の圧政者たちは、我々が抵抗する能力を奪うために武器を没収したものだった。武装条例は、全てのハイランダーたちに銃器を所有し、訓練する事を義務づけている。"
  hsc_ossian:0 "オシアン"
- hsc_ossian_desc:0 "ゲール文化のロマン派の復活は、仮名「オシアン」の名の下に書かれた詩集の中で例示されている。彼らは、ハイランダーに過去の自身の名高き歴史を想起させる古代の民間伝承の物語を語る。"
+ hsc_ossian_desc:0 "「オシアン」という筆名で書かれた詩集はゲール文化のロマン派の復活の好例である。それらの詩はハイランダーたちがに過去の自身の名高き歴史を想起させる古くからの民話を物語っている。"
  FLY_ideas:0 "オファリーのアイデア"
  FLY_ideas_start:0 "オファリーの伝統"
  FLY_ideas_bonus:0 "オファリーの野望"
